--- a/configurations/plot_independent_channels_geophone_2.yaml
+++ b/configurations/plot_independent_channels_geophone_2.yaml
@@ -1,6 +1,6 @@
 # Data path
 paths:
-  path_data: ./data/CSIC_LaPalma_Geophone2_X/  # Path to input datafiles
+  path_data: ./data/CSIC_ElHierro_Geophone2_X/  # Path to input datafiles
   path_output: ./results/seismic_plots    # Path for output data (results)
 
 # Date range to plot
@@ -27,7 +27,7 @@ day_plotting:
   time_interval_one_row: 1440  # In minutes
 
 # Format of figure file
-fig_format: svg  # png, eps, pdf
+fig_format: svg  # png, eps, pdf, ps
 
 # Verbosing
 verbose: True
@@ -35,7 +35,7 @@ verbose: True
 ---
 
 paths:
-  path_data: ./data/CSIC_LaPalma_Geophone2_Y/  # Path to input datafiles
+  path_data: ./data/CSIC_ElHierro_Geophone2_Y/  # Path to input datafiles
   path_output: ./results/seismic_plots    # Path for output data (results)
 
 # Date range to plot
@@ -62,7 +62,7 @@ day_plotting:
   time_interval_one_row: 1440  # In minutes
 
 # Format of figure file
-fig_format: svg  # png, eps, pdf
+fig_format: svg  # png, eps, pdf, ps
 
 # Verbosing
 verbose: True
@@ -70,7 +70,7 @@ verbose: True
 ---
 
 paths:
-  path_data: ./data/CSIC_LaPalma_Geophone2_Z/  # Path to input datafiles
+  path_data: ./data/CSIC_ElHierro_Geophone2_Z/  # Path to input datafiles
   path_output: ./results/seismic_plots    # Path for output data (results)
 
 # Date range to plot
@@ -97,7 +97,7 @@ day_plotting:
   time_interval_one_row: 1440  # In minutes
 
 # Format of figure file
-fig_format: svg  # png, eps, pdf
+fig_format: svg  # png, eps, pdf, ps
 
 # Verbosing
 verbose: True
